--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="">Início</a>
           <a href="">Séries</a>
           <a href="">Filmes</a>
-          <a href="">Bombando</a>
+          <a href="" class="mb">Bombando</a>
           <a href="">Minha lista</a>
         </nav>
       </div>
@@ -27,7 +27,7 @@
       <div class="filme-principal">
         <div class="container">
           <h3 class="titulo">Gilmore Girls</h3>
-          <p class="descricao">Em uma pequena cidade que mistura sonhadores, artistas e pessoas comuns, este drama multigeracional sobre família e amizade gira em torno da relação de Lorelai Gilmore e sua filha, Rory.</p>
+          <p class="descricao mb">Em uma pequena cidade que mistura sonhadores, artistas e pessoas comuns, este drama multigeracional sobre família e amizade gira em torno da relação de Lorelai Gilmore e sua filha, Rory.</p>
           <div class="botoes">
             <button class="btn" role="button">
               <img src="img/play.png" alt=""> Assistir
